--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+     "socket-server": "node ./server.js",
+    "dev": "concurrently \"vite\" \"npm run socket-server\"",
+    
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
+    "concurrently": "^9.0.1",
     "vite": "^5.4.1"
   }
 }
